[gd_scene load_steps=35 format=2]

[ext_resource path="res://Game_Files/Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Game_Files/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Game_Files/Assets_UI/Interface/Interface.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game_Files/Player/Light.png" type="Texture" id=4]
[ext_resource path="res://Game_Files/SFX/PaperPickup1.wav" type="AudioStream" id=5]
[ext_resource path="res://Game_Files/SFX/PaperPickup3.wav" type="AudioStream" id=6]
[ext_resource path="res://Game_Files/SFX/PaperPickup2.wav" type="AudioStream" id=7]
[ext_resource path="res://Game_Files/Player/Puff.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Puffing"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Puff:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -5 ), Vector2( 16, -5 ), Vector2( 24, -15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Puff:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Victory"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("FadeIn:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 2.5
height = 2.0

[sub_resource type="Animation" id=4]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "flash_light_pos"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "flash_light_pos"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "flash_light_pos"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "flash_light_pos"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.45
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 3.5, -2.5 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "flash_light_pos"
} ]
}

[sub_resource type="Animation" id=9]
length = 0.45
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 3.5, -2.5 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "flash_light_pos"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.45
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 3.5, -2.5 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "flash_light_pos"
} ]
}

[sub_resource type="Animation" id=11]
length = 0.45
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 3.5, -2.5 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "flash_light_pos"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Idle Down"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Idle Up"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Idle Left"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Idle Right"

[sub_resource type="AnimationNodeBlendSpace2D" id=16]
blend_point_0/node = SubResource( 12 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 13 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 14 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 15 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Run Left"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Run Right"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Run Down"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "Run Up"

[sub_resource type="AnimationNodeBlendSpace2D" id=21]
blend_point_0/node = SubResource( 17 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 18 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 19 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 20 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachine" id=24]
states/Idle/node = SubResource( 16 )
states/Idle/position = Vector2( 277.667, 12.3333 )
states/Run/node = SubResource( 21 )
states/Run/position = Vector2( 505.667, 11.5556 )
transitions = [ "Idle", "Run", SubResource( 22 ), "Run", "Idle", SubResource( 23 ) ]
start_node = "Idle"
graph_offset = Vector2( -4, -99 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=25]

[sub_resource type="CapsuleShape2D" id=26]
radius = 5.11485
height = 9.0

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision_layer = 2
collision_mask = 15
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
frame = 1

[node name="Position2D" type="Position2D" parent="Sprite"]
position = Vector2( 3.368, 2.69 )

[node name="Light2D" type="Light2D" parent="Sprite/Position2D"]
show_behind_parent = true
position = Vector2( -0.0186238, -0.0730419 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
offset = Vector2( 24.7983, -1.89367 )
texture_scale = 0.1
range_item_cull_mask = 5
shadow_enabled = true

[node name="Puff" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 8 )
offset = Vector2( 8, -5 )

[node name="PuffPlayer" type="AnimationPlayer" parent="."]
anims/Puffing = SubResource( 1 )
anims/Victory = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.156353, 4.93221 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Idle Down" = SubResource( 4 )
"anims/Idle Left" = SubResource( 5 )
"anims/Idle Right" = SubResource( 6 )
"anims/Idle Up" = SubResource( 7 )
"anims/Run Down" = SubResource( 8 )
"anims/Run Left" = SubResource( 9 )
"anims/Run Right" = SubResource( 10 )
"anims/Run Up" = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 24 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 25 )
parameters/Idle/blend_position = Vector2( 0.01, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2( -0.175879, 0.0928744 )
scale = Vector2( 0.820383, 0.861048 )
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
scale = Vector2( 1, 1 )
shape = SubResource( 26 )

[node name="Sprint_Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="Cooldown_Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = -10
limit_right = 880
limit_bottom = 480
limit_smoothed = true
smoothing_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]
scale = Vector2( 1.5, 1.5 )
transform = Transform2D( 1.5, 0, 0, 1.5, 0, 0 )

[node name="Interface" parent="Camera2D/CanvasLayer" instance=ExtResource( 3 )]
anchor_left = 0.0166667
anchor_top = 0.0296296
anchor_right = 1.01667
anchor_bottom = 1.02963

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0

[node name="PickupSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0

[node name="PickupSound3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="FadeIn" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0 )
margin_left = -320.0
margin_top = -178.0
margin_right = 340.0
margin_bottom = 200.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Sprint_Timer" to="." method="_on_Sprint_Timer_timeout"]
[connection signal="timeout" from="Cooldown_Timer" to="." method="_on_Cooldown_Timer_timeout"]
